--- a/angular-iti2/angular.json
+++ b/angular-iti2/angular.json
@@ -107,7 +107,12 @@
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+
+"assets":[
+  "src/app/assets"
+]
+
           }
         }
       }
